# returnshield-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  diagnose.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  shopify.app.toml  shopify.web.toml  start_server.sh
app/: __init__.py  config.py  database.py  dependencies.py  main.py  portal_views.py
app/api/: __init__.py  router.py
app/api/v1/: __init__.py  analytics.py  diagnostics.py  exchanges.py  fit_engine.py  portal.py  predictions.py  returns.py  webhooks.py
app/auth/: __init__.py  oauth.py  session_token.py
app/ml/: __init__.py  data_loader.py  features.py  fit_recommender.py  return_predictor.py  trainer.py
app/models/: __init__.py  base.py  exchange.py  merchant.py  prediction.py  product_fit.py  return_item.py  return_request.py
app/services/: __init__.py  shopify_client.py
app/templates/: analytics.html  base.html  dashboard.html  diagnostics.html  fit_engine.html  returns.html  settings.html
app/templates/portal/: items.html  lookup.html  portal_base.html  success.html
app/workers/: __init__.py  celery_app.py  tasks.py
