[project]
name = "returnshield-ai"
version = "0.1.0"
description = "AI-Powered Returns & Exchange Autopilot for Shopify"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",

    # Shopify
    "ShopifyAPI>=12.6.0",
    "PyJWT>=2.9.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",

    # Cache & Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # ML
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "joblib>=1.4.0",

    # Templating & HTTP
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",

    # Config & Utils
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",

    # Monitoring
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
